--- a/stylesheets/style.css
+++ b/stylesheets/style.css
@@ -1,4 +1,34 @@
 * {
-    font-family: Arial, Helvetica, sans-serif;
-    background-color: blue;
+    font-family: 'Rubik', Arial, Helvetica, sans-serif;
+}
+
+h1 {
+    text-align: center;
+    font-weight: bold;
+}
+
+#photo {
+    width: 8vw;
+    height: auto;
+}
+
+.subtitle {
+    color: rgb(151, 156, 165, 0.89);
+    text-transform: uppercase;
+}
+
+footer p {
+    text-align: right;
+    font-style: italic;
+}
+
+nav > ol {
+    list-style: none;
+}
+
+section {
+    border: 0.2pt solid #cedddd;
+    margin: 4px 2px 8px 2px;
+    padding: 1.5% 0.8%;
+    margin-bottom: 1.2rem;
 }
