--- a/stylesheets/style.css
+++ b/stylesheets/style.css
@@ -41,3 +41,31 @@ section {
     -moz-box-shadow: 3px 3px 1px 0px rgba(235, 234, 234, 0.60);
     box-shadow: 3px 3px 1px 0px rgba(235, 234, 234, 0.60);
 }
+
+nav ul {
+    display: flex;
+    justify-content: space-between;
+    flex-direction: row;
+    align-items: center;
+    gap: 1rem;
+    list-style: none;
+    padding: 0;
+    margin: 0;
+    width: 100%;
+}
+
+section form {
+    display: grid;
+    grid-template-columns: 1fr;
+    gap: 1rem;
+}
+
+#testimonios {
+    display: grid;
+    grid-template-columns: repeat(3, 1fr);
+    gap: 1rem;
+}
+
+#testimonios h2 {
+    grid-column: 1 / span 3;
+}
